--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,7 @@
 [server]
+headless = true
 enableCORS = false
 enableXsrfProtection = false
+enableWebsocketCompression = false
+port = 8080
+address = "0.0.0.0"
